Fix the news' layout issue for mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,7 @@ a {
 	}
 
 	.newsFrame {
-		height: 300px;
+		/*height: 300px;*/
 	}
 
 	.newsImage {
@@ -242,7 +242,7 @@ a {
 	}
 
 	.newsTitle {
-		height: 100px;
+		/*height: 100px;*/
 	}
 
 	.companyNewsName {
